fixed issues with projects overlapping and sizing

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -161,7 +161,7 @@ z-index: -5;
     
     /* Contact Page */
     .contact-page{
-      margin-top: 80px;
+      margin-top: 300px;
       height: 100%;
     }
     .contact-header{
